logs/2023-12-05-01-42-01/clientbuild.log
main.c: In function ‘main’:
main.c:70:28: error: ‘session’ undeclared (first use in this function)
   70 |                         if(session->pasv_flag == 0)
      |                            ^~~~~~~
main.c:70:28: note: each undeclared identifier is reported only once for each function it appears in
ftpClient.c: In function ‘ftpclient_read_cmd’:
ftpClient.c:60:9: warning: implicit declaration of function ‘read_input’; did you mean ‘readlinkat’? [-Wimplicit-function-declaration]
   60 |         read_input(buf,size);
      |         ^~~~~~~~~~
      |         readlinkat
ftpClient.c: In function ‘ftpclient_list’:
ftpClient.c:179:33: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘ssize_t’ {aka ‘long int’} [-Wformat=]
  179 |                 printf("list s:%d\n",s);
      |                                ~^    ~
      |                                 |    |
      |                                 int  ssize_t {aka long int}
      |                                %ld
ftpClient.c: In function ‘ftpclient_pasv’:
ftpClient.c:209:25: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘ssize_t’ {aka ‘long int’} [-Wformat=]
  209 |         printf("list s:%d\n",s);
      |                        ~^    ~
      |                         |    |
      |                         int  ssize_t {aka long int}
      |                        %ld
